2021-03-26 Franz Holzinger <franz@ttproducts.de>
    * new feature additional parameter: single_page.linkParam = no_cache=1. no_cache is not added automatically any more. You can build your extension based on USER_INT.
    
2021-03-24 Franz Holzinger <franz@ttproducts.de>
    * new feature image: A FAL record o an image is included as enclosure in the RSS feed.

2021-03-23 Franz Holzinger <franz@ttproducts.de>
    * remove feature multidomain: No domain records are available any more. Use a TYPO3 link method instead of the current link generation in the future, if this feature is needed again.

2021-03-18 Franz Holzinger <franz@ttproducts.de>
	* compatibility TYPO3 9.5, 10.4: renamed classes. THe former classes from div and lib are not used any more.

##################################################
04-07-16 Franz Holzinger <franz@ttproducts.de>
	* bugfix for TYPO3 6.2: Use the CacheManager

16-03-15 Franz Holzinger <franz@ttproducts.de>
	* based on div2007 instead of div and lib

09-12-09 Fabien Udriot <fabien.udriot@ecodev.ch>
	* Added configuration key: "baseUrl"

09-12-09 Fabien Udriot <fabien.udriot@ecodev.ch>
	* Added 2 configuration keys: "additionalPids" and "additionalSQL". Useful in tt_news context.
	* Added tt_news example
	* Fixed small bugs
	* Updated documentation

01-12-09 Fabien Udriot <fabien.udriot@ecodev.ch>
	* Fixed problem for user-configured table
	* Added extraFields configuration
	* Added htmlspecialchars on URL
	* Documentation updated

27-04-09 Fabien Udriot <fabien.udriot@ecodev.ch>
	* added tidy option for clearing the feed and make it XML compliant.
	* added author field thanks to Alexandre Morel <alexandre.morel@arcantel.ch>

01-04-09 Fabien Udriot <fabien.udriot@ecodev.ch>
	* fixed bug with big database thanks to Alexandre Morel <alexandre.morel@arcantel.ch>
	* Corrected absolute URL (displays now images)
	* added clear_cache parameter (clear_cache=1)